kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: praktikum-max
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: praktikum-max
  type: NodePort
