kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: basic-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "max-static-ip"
spec:
  backend:
    serviceName: praktikum-max
    servicePort: 80
